fix(scss): corrected image alignment

--- a/src/app/page/main-page/main-page.component.scss
+++ b/src/app/page/main-page/main-page.component.scss
@@ -74,7 +74,7 @@
     grid-template-rows: repeat(5, 1fr);
     align-content: space-evenly;
     justify-content: space-evenly;
-    align-items: baseline;
+    align-items: center;
     width: 100%;
     max-height: 65vh;
     height: 100%;
